--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,10 +1,8 @@
+version: 2
 run:
   timeout: 5m
 linters:
   enable:
-    - gofmt
-    - goimports
-    - gosimple
     - govet
     - ineffassign
     - staticcheck
